--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-masonry-css": "^1.0.14",
     "swr": "^0.4.0",
     "tailwindcss": "^2.0.2"
   }
